# phenix

./: .gitignore  phenix.sublime-project  phenix.sublime-workspace
gammajet_exodus/: OSCARtoROOT.cpp  exodus.cpp  exodus_decay.cpp  exodus_generate.cpp  make_jobs.pl  make_single_jobs.pl  matt_make_jobs.pl  outfe.list  runJF.csh  run_matt.csh  run_matt.sh  run_meg.csh  run_meg_100K.csh  run_one.csh  run_single_mode.csh  run_test_0.csh  thoutr10.list
gammajet_exodus/exec/: run_exodusII_0.csh  run_exodusII_1.csh  run_exodusII_10.csh  run_exodusII_100.csh  run_exodusII_1000.csh  run_exodusII_1001.csh  run_exodusII_1002.csh  run_exodusII_1003.csh  run_exodusII_1004.csh  run_exodusII_1005.csh  run_exodusII_1006.csh  run_exodusII_1007.csh  run_exodusII_1008.csh  run_exodusII_1009.csh  run_exodusII_101.csh  run_exodusII_1010.csh  run_exodusII_1011.csh  run_exodusII_1012.csh  run_exodusII_1013.csh  run_exodusII_1014.csh  run_exodusII_1015.csh  run_exodusII_1016.csh  run_exodusII_1017.csh  run_exodusII_1018.csh  run_exodusII_1019.csh  run_exodusII_102.csh  run_exodusII_1020.csh  run_exodusII_1021.csh  run_exodusII_1022.csh  run_exodusII_1023.csh  run_exodusII_1024.csh  run_exodusII_1025.csh  run_exodusII_1026.csh  run_exodusII_1027.csh  run_exodusII_1028.csh  run_exodusII_1029.csh  run_exodusII_103.csh  run_exodusII_1030.csh  run_exodusII_1031.csh  run_exodusII_1032.csh  (+3960 more)
gammajet_exodus/inc/: DecayList.h  DeclareROOTObjects.h  DeclareROOTObjects.h.sara  InPHENIXAcceptance.h  Momentum.h  Particle.h  ParticleGeneratorList.h  ParticleList.h  ParticlePropertyList.h
gammajet_exodus/macros/: Post_Exodus.C  analyze_pi0_invmass_bypt.C  calculate_Rgamma.C  calculate_Rgamma_tag.C  calculate_Rgamma_tag_before030309.C  calculate_Rgamma_tag_sim.C  calculate_Rgamma_tag_test.C  calculate_e_pizero.C  calculate_integrated_raa.C  check_Rgamma.C  check_bias.C  check_direct_photon.C  check_ke3.C  check_spectra_parameterization.C  cocktail_change.C  cocktail_systematic_pp.C  colorpalette.C  compare2data.C  compare_hitmaps.C  compare_sharkfins.C  consistency_ceck_auau200.C  consistency_ceck_auau200_final.C  consistency_ceck_output_final.C  conv_corrs.C  cop_041113_make_hotdead_tower_list.C  dNdypi0.C  dNdypi0_auau.C  dsigmadypi0.C  fast_merge.C  fcompf.C  fit_spectra.C  fitpi0peaks.C  (+35 more)
hijing/: HepMC2PHPythia.C  HepMC2PHPythia.h  HijingAnalysis.C  Makefile.am  Makefile.in  autogen.sh  configure  configure.in  hijing_analysis.C  hijing_analysis.h  hijing_analysisLinkDef.h
hijing/autom4te.cache/: output.0  output.1  traces.0  traces.1
hijing/macros/: run_shijing.sh  shijing_ana_macro.C  submit_hijing.sh
offline/: gammah.sublime-workspace
offline/AnalysisTrain/Correlation/: ACluster.C  ACluster.h  AEvent.C  AEvent.h  AMixingPool.C  AMixingPool.h  AMixingTree.C  AMixingTree.h  AParticle.C  AParticle.h  APiZero.C  APiZero.h  ATrack.C  ATrack.h  Correlation.C  Correlation.h  CorrelationFunctions.h  CorrelationLinkDef.h  Makefile.am  Warnmap.C  Warnmap.h  configure.in  gammah.sublime-project  gammah.sublime-workspace
offline/AnalysisTrain/Correlation/AnaTaxi/CVS/: Repository
offline/AnalysisTrain/Correlation/CVS/: Entries  Repository
offline/AnalysisTrain/Correlation/ParTree/: par_tree_Run11_hadron.root  parameter_trees_Run10.root
offline/AnalysisTrain/Correlation/ParTree/CVS/: Entries  Repository
offline/AnalysisTrain/Correlation/Warnmap/: d_Au_warnmap.txt  d_Au_warnmap_0to5GeV_cut.txt  d_Au_warnmap_above5GeV_cut.txt  extrawarnmap.txt  extrawarnmap_run10.txt  newwarnmap_0to5GeV.txt  newwarnmap_above5GeV.txt  warnmap_0to5GeV.txt  warnmap_0to5_run10.txt  warnmap_above5GeV.txt
offline/AnalysisTrain/Correlation/Warnmap/CVS/: Entries  Repository
offline/AnalysisTrain/Correlation/inputs/CVS/: Entries  Repository
offline/AnalysisTrain/Correlation/inputs/run10/: AA_trig_eff_1_v0.root
offline/AnalysisTrain/Correlation/inputs/run10/CVS/: Entries  Repository
offline/AnalysisTrain/Correlation/inputs/run11/: AA_11_trig_eff_0_v0.root  AA_11_trig_eff_1_v0.root  AA_11_trig_eff_2_v0.root  AA_11_trig_eff_3_v0.root
offline/AnalysisTrain/Correlation/inputs/run11/CVS/: Entries  Repository
offline/AnalysisTrain/Correlation/macros/: Run_d_Au_Correlation.C  combine_pt.C  compare.C  dphi_ratio_fit.C  dphi_run_by_run_test.C  eval_err.C  make_cfs.C  make_dirs.C  make_ptdep_fit.C  make_v2_graphs.C
offline/AnalysisTrain/Correlation/macros/CVS/: Entries  Repository
offline/AnalysisTrain/combinesimple/: CombinedSimple.C  CombinedSimple.h  CombinedSimpleLinkDef.h  Makefile.am  combOnetrigbgSimple.C  combOnetrigbgSimple.h  combOnetrigbgTrack.C  combOnetrigbgTrack.h  configure.in
offline/AnalysisTrain/combinesimple/CVS/: Entries  Repository
offline/AnalysisTrain/combinesimple/hpwrk/CVS/: Repository
offline/AnalysisTrain/combinesimple/inputs/CVS/: Entries  Repository
offline/AnalysisTrain/combinesimple/inputs/run10/: AA_trig_eff_0_v0.root  AA_trig_eff_2_v0.root  AA_trig_eff_3_v0.root  filltimecorrs_PisaEffcorr_cent0_bg_sys-1.root  filltimecorrs_PisaEffcorr_cent0_bg_sys0.root  filltimecorrs_PisaEffcorr_cent0_bg_sys1.root  filltimecorrs_PisaEffcorr_cent0_fg_sys-1.root  filltimecorrs_PisaEffcorr_cent0_fg_sys0.root  filltimecorrs_PisaEffcorr_cent0_fg_sys1.root  filltimecorrs_PisaEffcorr_cent1_bg_sys-1.root  filltimecorrs_PisaEffcorr_cent1_bg_sys0.root  filltimecorrs_PisaEffcorr_cent1_bg_sys1.root  filltimecorrs_PisaEffcorr_cent1_fg_sys-1.root  filltimecorrs_PisaEffcorr_cent1_fg_sys0.root  filltimecorrs_PisaEffcorr_cent1_fg_sys1.root
offline/AnalysisTrain/combinesimple/inputs/run10/CVS/: Entries  Repository
offline/AnalysisTrain/combinesimple/inputs/run11/CVS/: Entries  Repository
offline/AnalysisTrain/combinesimple/inputs/run7/: AA_trig_eff_0_v0.root  AA_trig_eff_1_v0.root  AA_trig_eff_2_v0.root  AA_trig_eff_3_v0.root  filltimecorrs_PisaEffcorr_cent0_bg_sys0.root  filltimecorrs_PisaEffcorr_cent0_fg_sys0.root
offline/AnalysisTrain/combinesimple/inputs/run7/CVS/: Entries  Repository
offline/AnalysisTrain/combinesimple/macros/CVS/: Repository
offline/AnalysisTrain/combinesimple/wrk/CVS/: Repository
(+114 files in other folders)
